# job-system

./: CMakeLists.txt  LICENSE  README.md
src/: LoopManager.cpp  LoopManager.hpp  Thread.cpp  Thread.hpp  ThreadWorker.cpp  ThreadWorker.hpp  Work.cpp  Work.hpp
tests/: main.cpp
